Closed
Bug 948003
Opened 7 years ago
Closed 7 years ago
crash in _JNIEnv::CallStaticObjectMethod(_jclass*, _jmethodID*, ...) | anp_system_loadJavaClass(_NPP*, char const*)
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox27 unaffected, firefox28+ fixed, firefox29 fixed, fennec28+)
RESOLVED
FIXED
Firefox 29
Tracking | Status | |
---|---|---|
firefox27 | --- | unaffected |
firefox28 | + | fixed |
firefox29 | --- | fixed |
fennec | 28+ | --- |
People
(Reporter: kbrosnan, Assigned: snorp)
References
()
Details
(4 keywords)
Crash Data
Attachments
(1 file)
10.11 KB,
patch
|
blassey
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-ac3f0152-5a3d-4bdf-887c-76c242131208. ============================================================= Seems to be Flash related. Will investigate URLs later.
Reporter | ||
Updated•7 years ago
|
tracking-fennec: --- → ?
status-firefox27:
--- → unaffected
status-firefox28:
--- → affected
status-firefox29:
--- → affected
tracking-firefox28:
--- → ?
Assignee | ||
Comment 1•7 years ago
|
||
I can reproduce this easily just by going to http://people.mozilla.org/~jwillcox/flash/flash_test.html
Assignee: nobody → snorp
Comment 2•7 years ago
|
||
https://crash-stats.mozilla.com/report/index/dfc696a3-8528-48b2-bc9d-0bead2131205 if needed too has a comment/email
Keywords: regression,
reproducible
Reporter | ||
Comment 3•7 years ago
|
||
STR: * Go to YouTube * Request desktop site * Click on a video * Activate Flash * Press the full screen button + Crash * Does not affect HTML <video>
Assignee | ||
Comment 4•7 years ago
|
||
Looks like this got broken when ProGuard was enabled.
Attachment #8345970 -
Flags: review?(chriskitching)
Assignee | ||
Updated•7 years ago
|
Attachment #8345970 -
Flags: review?(chriskitching) → review?(blassey.bugs)
Comment 5•7 years ago
|
||
Comment on attachment 8345970 [details] [diff] [review] Mark GeckoAppShell.loadPluginClass() as used from JNI Review of attachment 8345970 [details] [diff] [review]: ----------------------------------------------------------------- r=blassey if you didn't intend to remove jSetSelectedLocale and drop that part of the patch ::: widget/android/GeneratedJNIWrappers.h @@ -162,5 @@ > static jmethodID jScheduleRestart; > static jmethodID jSendMessageWrapper; > static jmethodID jSetFullScreen; > static jmethodID jSetKeepScreenOn; > - static jmethodID jSetSelectedLocale; why?
Attachment #8345970 -
Flags: review?(blassey.bugs) → review+
Assignee | ||
Comment 6•7 years ago
|
||
(In reply to Brad Lassey [:blassey] (use needinfo?) from comment #5) > Comment on attachment 8345970 [details] [diff] [review] > Mark GeckoAppShell.loadPluginClass() as used from JNI > > Review of attachment 8345970 [details] [diff] [review]: > ----------------------------------------------------------------- > > r=blassey if you didn't intend to remove jSetSelectedLocale and drop that > part of the patch > > ::: widget/android/GeneratedJNIWrappers.h > @@ -162,5 @@ > > static jmethodID jScheduleRestart; > > static jmethodID jSendMessageWrapper; > > static jmethodID jSetFullScreen; > > static jmethodID jSetKeepScreenOn; > > - static jmethodID jSetSelectedLocale; > > why? *shrug* That file is automatically generated. I didn't change that line. I'd say someone modified it by hand and forgot to remove that?
Assignee | ||
Comment 7•7 years ago
|
||
The jSetSelectedLocale stuff was removed in https://hg.mozilla.org/mozilla-central/rev/cd918aef9e64 but the part in the header remained.
Assignee | ||
Comment 8•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/9e6bdc10cf33
Assignee | ||
Comment 9•7 years ago
|
||
Comment on attachment 8345970 [details] [diff] [review] Mark GeckoAppShell.loadPluginClass() as used from JNI [Approval Request Comment] Bug caused by (feature/regressing bug #): 709230 User impact if declined: Flash goes boom Testing completed (on m-c, etc.): None yet Risk to taking this patch (and alternatives if risky): Low String or IDL/UUID changes made by this patch: None
Attachment #8345970 -
Flags: approval-mozilla-aurora?
Comment 10•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/9e6bdc10cf33
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 29
Updated•7 years ago
|
tracking-fennec: ? → 28+
Updated•7 years ago
|
Updated•7 years ago
|
Attachment #8345970 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•4 months ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•