Bug 948003 - Mark GeckoAppShell.loadPluginClass() as used from JNI. r=blassey, a=lsblakk