mobile/android/base/GeckoAppShell.java
@@ -2081,6 +2081,7 @@ public class GeckoAppShell
         return pluginCL.loadClass(className);
     }
 
+    @WrapElementForJNI(allowMultithread = true)
     public static Class<?> loadPluginClass(String className, String libName) {
         if (getGeckoInterface() == null)
             return null;
